--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#coaches">FIND COACH</a>
+                <a class="nav-link" href="#mentors">FIND MENTOR</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#classes">APPLY FOR COACH</a>
+                <a class="nav-link" href="#classes">APPLY FOR MENTOR</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about">ABOUT US</a>
@@ -87,7 +87,7 @@
                 <a class="nav-link" href="#contact">CONTACT</a>
               </li>
               <li class="nav-item dropdown dmenu">
-                <a class="nav-link " href="#">SIGN UP/ SIGN IN</a>
+                <a class="nav-link " href="#">SIGN UP</a>
                 <div class="dropdown-menu">
                   <a class="dropdown-item" href="#">Sign Up</a>
                   <a class="dropdown-item" href="#">Sign In</a>
@@ -106,15 +106,36 @@
 
   <!-- Jumbotron -->
   <div class="jumbotron jumbotron-fluid"
-    style="height: 100%; background-image: url(images/women.jpg); background-size: cover;">
+    style="height: 100%; background-image: url(images/JumboAlpha.jpg); background-size: cover;">
     <div class="container" style="font-family: 'Lato', sans-serif;">
-      <h1 class="display-4 text-white" style="font-weight: 800; font-style: oblique;">WELCOME TO <br>FIND SPORTS MENTOR
+      <h1 class="display-4 text-white" style="font-weight: 800; font-style: oblique;">WELCOME TO <br> MENT2BE
       </h1>
-      <p class="lead" style="color: #f62d51; font-weight: 650;"><i>SPORTS PERFORMANCE TRAINING COACHING SERVICES</i></p>
-      <p class="text-white">We Provide Local Sports Coaches For Sports Performance Training Lessons & Training Best
+      <p class="lead" style="color: #439A86; font-weight: 650;"><i>SPORTS PERFORMANCE TRAINING MENTORING SERVICES</i>
+      </p>
+      <p class="text-white">We Provide Local Sports mentors For Sports Performance Training Lessons <br> & Training Best
         Value Guaranteed
       </p>
       <a href="#" class="btn btn-primary text-white">CONTACT NOW</a>
+
+      <!-- Login Form -->
+      <div class="card text-white bg-primary mb-3" style="max-width: 25rem; margin-top: 10%">
+        <div class="card-header mx-auto"> <span>Login</span> </div>
+        <div class="card-body">
+          <form>
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                placeholder="Enter email">
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <button type="submit" class="btn btn-primary text-white">Submit</button>
+            <small id="emailHelp" class="form-text text-white">Forgot you password? <a href="#"> Click Here</a></small>
+          </form>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -128,7 +149,7 @@
               <div class="col-sm-12 col-md-12 col-lg-6">
                 <!-- BOX 1 -->
                 <div class="rs-feature-box-1 bg-primary-1" data-background="images/gear.jpg"
-                  style="background-image: url(images/gear.jpg)">
+                  style="background-image: url(images/CardAlpha.jpg)">
                   <div class="title">NEW MEMBERS JOIN NOW!<br>GET 20% OFF ALL SPORTS PERFORMANCE TRAINING LESSONS</div>
                   <div class="body">
                     <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
@@ -254,8 +275,8 @@
     </div>
   </div>
 
-  <!-- Coaches -->
-  <div id="coaches" class="section">
+  <!-- mentors -->
+  <div id="mentors" class="section">
     <div class="content-wrap">
       <div class="container">
         <!-- Search Bar -->
@@ -264,16 +285,18 @@
             <form class="form-inline">
               <div class="col-lg-5 p-0 col-md-12 mb-md-5">
                 <div class="left-search-bg">
-                  <label for="What" class="float-left ml-3 font-weight-bold search-label mt-3"><i class="fas fa-running"></i>WHAT</label>
-                  <input class="form-control left-search rounded-0 mt-2 mt-lg-0" type="search" placeholder="ex: Basketball"
-                    aria-label="Search">
+                  <label for="What" class="float-left ml-3 font-weight-bold search-label mt-3"><i
+                      class="fas fa-running"></i> WHAT</label>
+                  <input class="form-control left-search rounded-0 mt-2 mt-lg-0" type="search"
+                    placeholder="ex: Basketball" aria-label="Search">
                 </div>
               </div>
               <div class="col-lg-5 p-0 col-md-10 mb-md-5">
                 <div class="right-search-bg">
-                  <label for="Where" class="float-left ml-3 search-label font-weight-bold mt-3"><i class="fa fa-map-pin" aria-hidden="true"></i>WHERE</label>
-                  <input class="form-control mr-sm-2 right-search rounded-0 mt-2 mt-lg-0" type="search" placeholder="ex: Orlando, FL"
-                    aria-label="Search">
+                  <label for="Where" class="float-left ml-3 search-label font-weight-bold mt-3"><i class="fa fa-map-pin"
+                      aria-hidden="true"></i> WHERE</label>
+                  <input class="form-control mr-sm-2 right-search rounded-0 mt-2 mt-lg-0" type="search"
+                    placeholder="ex: Orlando, FL" aria-label="Search">
                 </div>
               </div>
               <div class="col-lg-2 p-0 col-md-2 mb-md-5">
@@ -286,9 +309,9 @@
         <div class="row mt-5">
           <div class="col-sm-12 col-md-12 mt-5">
             <h2 class="section-heading text-center mb-4">
-              TOP COACHES
+              TOP MENTORS
             </h2>
-            <p class="subheading text-center mb-5">Our Popular Sports Coaches - Nationwide.
+            <p class="subheading text-center mb-5">Our Popular Sports mentors - Nationwide.
 
             </p>
           </div>
@@ -305,7 +328,7 @@
               <div class="body-box">
                 <div class="title">ERNEST DOEL <span class="text-white"> Atlanta, GA </span></div>
                 <div class="detail">
-                  <div class="col">Personal Coaches</div>
+                  <div class="col">Personal mentors</div>
                   <div class="col">
                     <div class="sosmed-icon d-inline-flex">
                       <a href="#"><i class="fa fa-facebook"></i></a>
@@ -327,7 +350,7 @@
               <div class="body-box">
                 <div class="title">SASHA DOEL<span class="text-white"> Atlanta, GA </span></div>
                 <div class="detail">
-                  <div class="col">Personal Coach</div>
+                  <div class="col">Personal Mentor</div>
                   <div class="col">
                     <div class="sosmed-icon d-inline-flex">
                       <a href="#"><i class="fa fa-facebook"></i></a>
@@ -349,7 +372,7 @@
               <div class="body-box">
                 <div class="title">BRUTO DOEL<span class="text-white"> Atlanta, GA </span></div>
                 <div class="detail">
-                  <div class="col">Personal Coach</div>
+                  <div class="col">Personal Mentor</div>
                   <div class="col">
                     <div class="sosmed-icon d-inline-flex">
                       <a href="#"><i class="fa fa-facebook"></i></a>
@@ -371,7 +394,7 @@
               <div class="body-box">
                 <div class="title">ELLYSA DOEL<span class="text-white"> Atlanta, GA </span></div>
                 <div class="detail">
-                  <div class="col">Personal Coach</div>
+                  <div class="col">Personal Mentor</div>
                   <div class="col">
                     <div class="sosmed-icon d-inline-flex">
                       <a href="#"><i class="fa fa-facebook"></i></a>
@@ -393,7 +416,7 @@
               <div class="body-box">
                 <div class="title">JOHN DOEL<span class="text-white"> Atlanta, GA </span></div>
                 <div class="detail">
-                  <div class="col">Personal Coach</div>
+                  <div class="col">Personal Mentor</div>
                   <div class="col">
                     <div class="sosmed-icon d-inline-flex">
                       <a href="#"><i class="fa fa-facebook"></i></a>
@@ -415,7 +438,7 @@
               <div class="body-box">
                 <div class="title">NETTA DOEL<span class="text-white"> Atlanta, GA </span></div>
                 <div class="detail">
-                  <div class="col">Personal Coach</div>
+                  <div class="col">Personal Mentor</div>
                   <div class="col">
                     <div class="sosmed-icon d-inline-flex">
                       <a href="#"><i class="fa fa-facebook"></i></a>
@@ -444,7 +467,8 @@
           <div class="col-sm-12 col-md-12 col-lg-8 offset-lg-2">
             <div class="text-center">
               <h2 class="text-primary"><em>Want To Become A Mentor?</em></h2>
-              <p class="mb-5">Are you a Sports Performance Training coach Apply for Sports Performance Training coaching
+              <p class="mb-5">Are you a Sports Performance Training Mentor Apply for Sports Performance Training
+                Mentoring
                 positions .Meet new clients and expand your business.</p>
               <a href="#" class="btn btn-primary">CONTACT NOW</a>
             </div>
@@ -556,46 +580,46 @@
       <div class="container">
 
         <div class="row p-1 justify-content-center"">
-          <div class="col-2">
-            <a href="#">
-              Terms and Conditions
-            </a>
-          </div>
-          <div class="col-2">
-            <a href="#">
-              Privacy Policy
-            </a>
-          </div>
-          <div class="col-2">
-            <a href="#">
-              Refunds
-            </a>
-          </div>
-          <div class="col-2">
-            <a href="#">
+          <div class=" col-2">
+          <a href="#">
+            Terms and Conditions
+          </a>
+        </div>
+        <div class="col-2">
+          <a href="#">
+            Privacy Policy
+          </a>
+        </div>
+        <div class="col-2">
+          <a href="#">
+            Refunds
+          </a>
+        </div>
+        <div class="col-2">
+          <a href="#">
             Cookies Policy
-            </a>
-          </div>
-          <div class="col-2">
-            <a href="#">
-              Disclaimer
-              </a>
-          </div>
+          </a>
+        </div>
+        <div class="col-2">
+          <a href="#">
+            Disclaimer
+          </a>
         </div>
       </div>
     </div>
+  </div>
 
-    <div class="fcopy">
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-12">
-            <p class="ftex">Copyright 2019 &copy; <span class="color-primary">. All Rights Reserved by
-                FindSportsMentor.com </span>.
-              Developed by <span class="color-primary">James Enterprisetech LLC.</span></p>
-          </div>
+  <div class="fcopy">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-md-12">
+          <p class="ftex">Copyright 2019 &copy; <span class="color-primary">. All Rights Reserved by
+              FindSportsMentor.com </span>.
+            Developed by <span class="color-primary">James Enterprisetech LLC.</span></p>
         </div>
       </div>
     </div>
+  </div>
 
   </div>
 
