--- a/index.html
+++ b/index.html
@@ -279,39 +279,12 @@
   <div id="mentors" class="section">
     <div class="content-wrap">
       <div class="container">
-        <!-- Search Bar -->
-        <div class="row mb-5 justify-content-center">
-          <nav class="navbar search-nav">
-            <form class="form-inline">
-              <div class="col-lg-5 p-0 col-md-12 mb-md-5">
-                <div class="left-search-bg">
-                  <label for="What" class="float-left ml-3 font-weight-bold search-label mt-3"><i
-                      class="fas fa-running"></i> WHAT</label>
-                  <input class="form-control left-search rounded-0 mt-2 mt-lg-0" type="search"
-                    placeholder="ex: Basketball" aria-label="Search">
-                </div>
-              </div>
-              <div class="col-lg-5 p-0 col-md-10 mb-md-5">
-                <div class="right-search-bg">
-                  <label for="Where" class="float-left ml-3 search-label font-weight-bold mt-3"><i class="fa fa-map-pin"
-                      aria-hidden="true"></i> WHERE</label>
-                  <input class="form-control mr-sm-2 right-search rounded-0 mt-2 mt-lg-0" type="search"
-                    placeholder="ex: Orlando, FL" aria-label="Search">
-                </div>
-              </div>
-              <div class="col-lg-2 p-0 col-md-2 mb-md-5">
-                <button class="myBtn text-white my-2 my-sm-0 ml-0 ml-lg-2" type="submit">Search</button>
-              </div>
-            </form>
-          </nav>
-        </div>
-
         <div class="row mt-5">
           <div class="col-sm-12 col-md-12 mt-5">
             <h2 class="section-heading text-center mb-4">
               TOP MENTORS
             </h2>
-            <p class="subheading text-center mb-5">Our Popular Sports mentors - Nationwide.
+            <p class="subheading text-center mb-5">Our Popular Mentors - Nationwide.
 
             </p>
           </div>
